--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "web-build": "react-app-rewired build && mkdir -p backend/web_build && cp -R build/* backend/web_build"
   },
   "dependencies": {
+    "apostrophe-fancy-page": "*",
     "abstract-env": "*",
     "babel-plugin-template-literals-qos": "*",
     "react": "17.0.1",
